src/test/ui/parser/item-free-static-no-body-semantic-fail.stderr
error: free static item without body
  --> $DIR/item-free-static-no-body-semantic-fail.rs:5:1
   |
LL | static A: u8;
   | ^^^^^^^^^^^^-
   |             |
   |             help: provide a definition for the static: `= <expr>;`

error: free static item without body
  --> $DIR/item-free-static-no-body-semantic-fail.rs:6:1
   |
LL | static B;
   | ^^^^^^^^-
   |         |
   |         help: provide a definition for the static: `= <expr>;`

error: free static item without body
  --> $DIR/item-free-static-no-body-semantic-fail.rs:9:1
   |
LL | static mut C: u8;
   | ^^^^^^^^^^^^^^^^-
   |                 |
   |                 help: provide a definition for the static: `= <expr>;`

error: free static item without body
  --> $DIR/item-free-static-no-body-semantic-fail.rs:10:1
   |
LL | static mut D;
   | ^^^^^^^^^^^^-
   |             |
   |             help: provide a definition for the static: `= <expr>;`

error: missing type for `static` item
  --> $DIR/item-free-static-no-body-semantic-fail.rs:6:8
   |
LL | static B;
   |        ^ help: provide a type for the item: `B: <type>`

error: missing type for `static mut` item
  --> $DIR/item-free-static-no-body-semantic-fail.rs:10:12
   |
LL | static mut D;
   |            ^ help: provide a type for the item: `D: <type>`

error: aborting due to 6 previous errors

